# layoutlm_experiments

./: README.md
llm_tests/: .gitignore  pyproject.toml
llm_tests/llm_tests/: .gitignore  budget_metrics.py  budget_metrics_s2s.py  budget_metrics_shared.py  budget_metrics_xqa.py  fuse_encdec.py  inference.py  inference_s2s.py  modeling_llm3bart.py  modeling_llm3dec.py  ocr.py  prep_docvqa_data.py  prep_docvqa_seq2seq.py  qa_trainer.py  s2s_trainer.py  segify_ocr.py  test1.py  testqa.py  train_docvqa.py  train_docvqa_seq2seq.py
