[tool.poetry]
name = "llm_tests"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
protobuf = "3.20.1"
torch = "^2.0.1"
torchvision = "^0.15.2"
transformers = "^4.29.2"
typer = "^0.6.1"
sentencepiece = "^0.1.99"
datasets = "^2.12.0"
Pillow = "^9.2.0"
pytesseract = "^0.3.9"
wandb = "^0.12.21"
numpy = "^1.24.3"
pandas = "^2.0.1"
editdistance = "^0.6.0"
azure-cognitiveservices-vision-computervision = "^0.9.0"
sacremoses = "^0.0.53"
pdfkit = "^1.0.0"
pdf2image = "^1.16.0"
opencv-python = "^4.6.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
test1 = "llm_tests.test1:main"
testqa = "llm_tests.testqa:main"
prep_docvqa_xqa = "llm_tests.prep_docvqa_xqa:main"
prep_docvqa_seq2seq = "llm_tests.prep_docvqa_seq2seq:main"
train_docvqa = "llm_tests.train_docvqa:main"
train_docvqa_seq2seq = "llm_tests.train_docvqa_seq2seq:main"
inference_xqa = "llm_tests.inference_xqa:main"
inference_s2s = "llm_tests.inference_s2s:main"
budget_metrics_xqa = "llm_tests.budget_metrics_xqa:main"
budget_metrics_s2s = "llm_tests.budget_metrics_s2s:main"
segify_ocr = "llm_tests.segify_ocr:main"
fuse_encdec = "llm_tests.fuse_encdec:main"
